tests/pos/todo/classes/28-func-field-ctor.ts

class Foo<M extends ReadOnly> {

    public bar: () => number;

    constructor() {
        this.bar = function() {
            return -3;
        }
    }
}
